# LittleECS

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  TestSuite_LITTLE_ECS.json  buildbuddy.yaml  premake5.lua
.buildkite/: linux_amd64.yml  template.yml  windows_amd64.yml
.github/workflows/: LittleECS.yml
Detail/: Core.h  TypeId.h
Docs/: Workflow.md
Examples/: MODULE.bazel  README.md
Examples/Workflow/: BUILD  main.cpp
Registry/: Registry.h
Tests/: BasicWorkflow.cpp  ComponentId.cpp
Tests/Perf/: PerformanceTest.cpp
src/LittleECS/: LittleECS.h
src/LittleECS/ComponentStrorages/CompressedComponentStorage/: CCSForEach-inl.h  CCSIterator-inl.h  CompressedCSInlineEntityToComponent.h  CompressedCSMapEntityToComponent.h  CompressedComponentStorage.h  CompressedComponentStoragePage.h
src/LittleECS/Core/: CompilerInfo.h  Core.h  UseProjectCore.h
src/LittleECS/Detail/: ApplicableFunction.h  ComponentId.h  ComponentIdGenerator.h  Core.h  Entity.h  EntityId.h  EntityIdGenerator.h  Exception.h  Iterable.h  TypeId.h  TypeParameterPack.h
src/LittleECS/Entity/: Entity.h  LiteEntity-inl-r.h  LiteEntity.h
src/LittleECS/Registry/: BasicView.h  BasicView.inl  ComponentStorage.h  IComponentStorage.h  Registry.h  Registry.inl  RegistryEach.h  RegistryForEach-inl.h  RegistryForEach.h  RegistryIterator-inl.h  RegistryIterator.h
src/LittleECS/Registry/Entity/: Entity.h  (+3 more)
tests/: BaseLittleECSTest.h  BasicWorkflow.cpp
tests/Detail/: BasicWorkflow.cpp  ComponentId.cpp  PerformanceTest.cpp  Registry.cpp  TypeId.cpp
tests/Perf/: PerformanceTest.cpp
(+23 files in other folders)
